package servicos

import (
	"encoding/json"
	"errors"
	"fmt"
	"mindtrace/backend/interno/aplicacao/dtos"
	"mindtrace/backend/interno/aplicacao/mappers"
	"mindtrace/backend/interno/dominio"
	"mindtrace/backend/interno/persistencia/repositorios"

	"gorm.io/gorm"
)

type InstrumentoServico interface {
	ListarInstrumentos(userID uint) ([]*dtos.InstrumentoDTOOut, error)
	CriarAtribuicao(userID, pacienteID, instrumentoID uint, instrumentoCodigo string) error
	ListarAtribuicoesProfissional(profId uint) ([]*dtos.AtribuicaoDTOOut, error)
	ListarAtribuicoesPaciente(pacId uint) ([]*dtos.AtribuicaoDTOOut, error)
	ListarPerguntasAtribuicao(usuarioId, atribuicaoId uint) (*dtos.AtribuicaoDTOOut, error)
	CriarRespostasAtribuicao(dto *dtos.RegistroRespostaDTOIn) error
	VisualizarRespostaAtribuicao(atribuicaoId uint) (*dtos.RespostaDetalhadaDTOOut, error)
}
type instrumentoServico struct {
	db              *gorm.DB
	instrumentoRepo repositorios.InstrumentoRepositorio
	usuarioRepo     repositorios.UsuarioRepositorio
	emailServico    EmailServico
}

func NovoInstrumentoServico(db *gorm.DB, instrumentoRepo repositorios.InstrumentoRepositorio, usuarioRepo repositorios.UsuarioRepositorio, es EmailServico) InstrumentoServico {
	return &instrumentoServico{
		db:              db,
		instrumentoRepo: instrumentoRepo,
		usuarioRepo:     usuarioRepo,
		emailServico:    es,
	}
}

func (is *instrumentoServico) ListarInstrumentos(userID uint) ([]*dtos.InstrumentoDTOOut, error) {
	var instrumentos []*dominio.Instrumento
	// Checar a existencia do profissional
	_, err := is.usuarioRepo.BuscarProfissionalPorUsuarioID(is.db, userID)
	if err != nil {
		if errors.Is(err, gorm.ErrRecordNotFound) {
			return nil, dominio.ErrUsuarioNaoEncontrado
		}
		return nil, err
	}

	// Buscar instrumentos
	instrumentos, err = is.instrumentoRepo.BuscarTodosAtivos(is.db)
	if err != nil {
		return nil, err
	}

	if instrumentos == nil {
		return nil, fmt.Errorf("slice instrumentos invalido: slice nulo")
	}
	for _, inst := range instrumentos {
		if err := inst.ValidarCodigo(); err != nil {

			return nil, fmt.Errorf("instrumento %s invalido: %w", inst.Codigo, err)
		}
		if err := inst.ValidarNome(); err != nil {

			return nil, fmt.Errorf("instrumento %s invalido: %w", inst.Nome, err)
		}
	}

	return mappers.InstrumentosParaDTOOut(instrumentos), nil
}

func (is *instrumentoServico) CriarAtribuicao(userID, pacienteID, instrumentoID uint, instrumentoCodigo string) error {
	err := is.db.Transaction(func(tx *gorm.DB) error {

		profissional, err := is.usuarioRepo.BuscarProfissionalPorUsuarioID(tx, userID)
		if err != nil {
			if errors.Is(err, gorm.ErrRecordNotFound) {
				return dominio.ErrUsuarioNaoEncontrado
			}
			return err
		}

		paciente, err := is.usuarioRepo.BuscarPacientePorID(tx, pacienteID)
		if err != nil {
			if errors.Is(err, gorm.ErrRecordNotFound) {
				return dominio.ErrUsuarioNaoEncontrado
			}
			return err
		}

		instrumento, err := is.instrumentoRepo.BuscarInstrumentoPorID(tx, instrumentoID)
		if err != nil {
			if errors.Is(err, gorm.ErrRecordNotFound) {
				return fmt.Errorf("instrumento nao encontrado: %v", err)
			}
			return err
		}

		atribuicao := &dominio.Atribuicao{
			ProfissionalID: profissional.ID,
			Profissional:   *profissional,
			PacienteID:     paciente.ID,
			Paciente:       *paciente,
			InstrumentoID:  instrumento.ID,
			Instrumento:    *instrumento,
		}

		if err = is.instrumentoRepo.CriarAtribuicao(tx, atribuicao); err != nil {
			return err
		}

		if err = atribuicao.Validar(); err != nil {
			return err
		}
		return nil

	})

	if err == nil {
		go func() {
			var pacEmail, pacNome, profNome, instNome string
			
			// Re-fetch para garantir dados frescos/carregados se necessário, 
			// mas aqui podemos pegar direto das repositories se tivermos os IDs.
			// Como o transaction já fechou, podemos usar is.db
			
			// Busca paciente para pegar email e nome
			pac, e := is.usuarioRepo.BuscarPacientePorID(is.db, pacienteID)
			if e == nil {
				pacNome = pac.Usuario.Nome
				pacEmail = pac.Usuario.Email
			}

			// Busca profissional para pegar nome
			prof, e := is.usuarioRepo.BuscarProfissionalPorUsuarioID(is.db, userID)
			if e == nil {
				profNome = prof.Usuario.Nome
			}

			// Busca instrumento para pegar nome
			inst, e := is.instrumentoRepo.BuscarInstrumentoPorID(is.db, instrumentoID)
			if e == nil {
				instNome = inst.Nome
			}

			if pacEmail != "" {
				is.emailServico.EnviarEmailAtribuicao(pacEmail, pacNome, profNome, instNome)
			}
		}()
	}

	return err
}

func (is *instrumentoServico) ListarAtribuicoesPaciente(usuarioId uint) ([]*dtos.AtribuicaoDTOOut, error) {
	var atribuicoes []*dominio.Atribuicao

	paciente, err := is.usuarioRepo.BuscarPacientePorUsuarioID(is.db, usuarioId)
	if err != nil {
		if errors.Is(err, gorm.ErrRecordNotFound) {
			return nil, dominio.ErrUsuarioNaoEncontrado
		}
		return nil, err
	}

	atribuicoes, err = is.instrumentoRepo.BuscarAtribuicoesPaciente(is.db, paciente.ID)
	if err != nil {
		return nil, err
	}

	for _, atribc := range atribuicoes {
		if err = atribc.Validar(); err != nil {
			return nil, err
		}
	}

	return mappers.AtribuicoesParaDTOOutPaciente(atribuicoes), nil
}

func (is *instrumentoServico) ListarAtribuicoesProfissional(usuarioId uint) ([]*dtos.AtribuicaoDTOOut, error) {
	var atribuicoes []*dominio.Atribuicao
	profissional, err := is.usuarioRepo.BuscarProfissionalPorUsuarioID(is.db, usuarioId)
	if err != nil {
		if errors.Is(err, gorm.ErrRecordNotFound) {
			return nil, dominio.ErrUsuarioNaoEncontrado
		}
		return nil, err
	}
	atribuicoes, err = is.instrumentoRepo.BuscarAtribuicoesProfissional(is.db, profissional.ID)
	if err != nil {
		return nil, err
	}

	for _, atribc := range atribuicoes {
		if err = atribc.Validar(); err != nil {
			return nil, err
		}
	}

	return mappers.AtribuicoesParaDTOOutProfissional(atribuicoes), nil
}

func (is *instrumentoServico) ListarPerguntasAtribuicao(usuarioId, atribuicaoId uint) (*dtos.AtribuicaoDTOOut, error) {
	var atribuicao *dominio.Atribuicao
	_, err := is.usuarioRepo.BuscarPacientePorUsuarioID(is.db, usuarioId)
	if err != nil {
		if errors.Is(err, gorm.ErrRecordNotFound) {
			return nil, dominio.ErrUsuarioNaoEncontrado
		}
		return nil, err
	}
	atribuicao, err = is.instrumentoRepo.BuscarAtribuicaoPorID(is.db, atribuicaoId)
	if err != nil {
		return nil, err
	}

	for _, pergunta := range atribuicao.Instrumento.Perguntas {
		if err = pergunta.Validar(atribuicao.Instrumento.Codigo); err != nil {
			return nil, err
		}
	}

	return mappers.AtribuicaoComPerguntasDTOOut(atribuicao), nil
}

func (is *instrumentoServico) CriarRespostasAtribuicao(dto *dtos.RegistroRespostaDTOIn) error {

	err := is.db.Transaction(func(tx *gorm.DB) error {

		atribuicao, err := is.instrumentoRepo.BuscarAtribuicaoPorID(tx, uint(dto.AtribuicaoID))
		if err != nil {
			return err
		}
		classificacao := ""
		novoRegistroResposta, err := mappers.CriarRegistroRespostasDTOInParaEntidade(dto, atribuicao.ID, classificacao)
		if err != nil {
			return err
		}
		if err = is.instrumentoRepo.CriarReposta(tx, novoRegistroResposta, atribuicao.ID); err != nil {
			return err
		}

		return err

	})
	return err
}

func (is *instrumentoServico) VisualizarRespostaAtribuicao(atribuicaoId uint) (*dtos.RespostaDetalhadaDTOOut, error) {

	var resposta *dominio.Resposta
	var dadosBrutos []map[string]any
	var dadosProcessados *dominio.ResultadoClinico
	err := is.db.Transaction(func(tx *gorm.DB) error {
		var err error
		resposta, err = is.instrumentoRepo.BuscarRespostaCompletaPorAtribuicaoID(tx, uint(atribuicaoId))
		if err != nil {
			return err
		}

		if err := json.Unmarshal(resposta.DadosBrutos, &dadosBrutos); err != nil {
			return err
		}

		avaliador, err := dominio.CriarAvaliador(resposta.Atribuicao.Instrumento.Codigo)
		if err != nil {
			return err
		}

		resultado := avaliador.Avaliar(dadosBrutos)
		dadosProcessados = &resultado

		return nil
	})

	return mappers.RespostaDetalhadaDTOOut(resposta, dadosBrutos, dadosProcessados), err
}
